# metapodfromurdf

./: AUTHORS  CMakeLists.txt  README.txt  qiproject.xml
cmake/: FindROSCPP.cmake  FindTINYXML.cmake  FindURDF.cmake
data/: simple_arm.config  simple_humanoid.config  simple_humanoid.urdf
include/metapodfromurdf/: metapodfromurdf.hpp
src/: metapodfromurdf-bin.cpp  metapodfromurdf.cpp
